# Nintendo-Switch-PC-Control

./: .gitignore  README.md
.github/workflows/: build-clients.yml  build-linux.yml  build-mac.yml  build-mobile.yml  build-pi.yml  build-release.yml  build-server.yml  build-windows-dynamic.yml  build-windows.yml  build.yml  clean-actions.yml
backend/rpi/: setup_gadget.sh
backend/rpi/include/: protocol.hpp
backend/rpi/src/backend/: main.cpp
client/: CMakeLists.txt  ns-client.cpp
client/linux/: build_gui.sh  ns-gamepad.cpp  ns-gui.cpp
client/mac/: build_gui.sh  ns-gamepad.mm  ns-gui.mm
client/mobile/android/app/src/main/: AndroidManifest.xml
client/mobile/ios/: project.yml
client/mobile/ios/NSControl/: NSControlApp.swift
client/windows/: build.bat  ns-gamepad.cpp  ns-gui.cpp
docs/: architecture.md  building-from-source.md  controller-modes.md  macros.md  raspberry-pi-setup.md  vision.md  wakeup.md  web-app.md
frontend/linux/: ns-gamepad.cpp
frontend/mac/: ns-gamepad.mm
frontend/windows/: ns-gamepad.cpp
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/assets/: ns_mobile
mobile/android/app/src/main/assets/ns_mobile/: editor.html  index.html  mobile.html
mobile/android/app/src/main/cpp/: CMakeLists.txt  ns_jni.c  sdl_controller_jni.cpp
mobile/android/app/src/main/res/drawable/: input_bg.xml
mobile/android/app/src/main/res/layout/: connect.xml
mobile/android/app/src/main/res/values/: attrs.xml  themes.xml
mobile/android/app/src/main/res/values-night/: themes.xml
mobile/ios/: project.yml
mobile/ios/NSControl/: BridgeManager.swift  Info.plist  NSControlApp.swift  ProtocolBridge.h  WebApp
mobile/ios/NSControl/WebApp/: index.html  mobile.html
mobile/ios/NSMobile/: AppDelegate.swift  Info.plist  NSMobile-Bridging-Header.h  ViewController.swift
mobile/ios/NSMobile.xcodeproj/: project.pbxproj
mobile/ios/NSMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobile/ios/NSMobile/Assets.xcassets/Logo.imageset/: Contents.json
mobile/shared/: ns_protocol.c  ns_protocol.h  sdl_controller.c
mobile/shared/include/: ns_protocol.h
mobile/shared/webapp/: index.html  mobile.html
rpi/src/backend/: main.cpp
server/: CMakeLists.txt  main.cpp
server/include/: macros.hpp
server/rpi/: CMakeLists.txt  setup_gadget.sh
server/rpi/include/: protocol.hpp
server/rpi/src/backend/: hori-main.cpp  main.cpp  pro-main.cpp
server/rpi/src/pro-controller-testing/: setup_probe.sh  test_probe.cpp
webapp/: index.html
windows/: ns-gamepad.cpp
(+4 files in other folders)
